# backtesting.py

./: CHANGELOG.md  README.md  pyproject.toml
backtesting/: _stats.py  _util.py  backtesting.py
backtesting/test/: _test.py
